--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ main{
 /* ===============================Задаем стили контента=====================================*/
 /* ===============================Задаем стили дороги=====================================*/
 .main__city {
-	background: url('/img/bg.jpg') 50% 0/50% 100% repeat;
+	background: url('../img/bg.jpg') 50% 0/50% 100% repeat;
 	width: 100%;
 	height: 500px;
 	
@@ -377,11 +377,11 @@ main{
 }
 .door1:hover::before {
 	content: "";
-	background: url("/img/5.jpg") center/80px 80px no-repeat;
+	background: url("../img/5.jpg") center/80px 80px no-repeat;
 }
 .door2:hover::before{
 	content: "";
-	background: url(/img/5.jpg) 0px 14px/55px 53px no-repeat;
+	background: url("../img/5.jpg") 0px 14px/55px 53px no-repeat;
 }
 .door2{
 	top: 10px;
